--- a/AI-Research-Assistance/src/main/resources/application.properties
+++ b/AI-Research-Assistance/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=AI-Research-Assistance
+server.port = 8080
+
+gemini.api.url = https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=
+gemini.api.key = ${GEMINI_KEY}
