Developed the front-end app

--- a/AI-Research-Assistance/src/main/resources/application.properties
+++ b/AI-Research-Assistance/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port = 8080
 
 gemini.api.url = https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=
 gemini.api.key = ${GEMINI_KEY}
+
+spring.data.mongodb.uri=mongodb://localhost:27017/note
+# MongoDB configuration
+
